out4.txt
/home/reddcs/aiia/documentation/data.js:4176
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v25.2.1
